crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__prelude_match_option.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__prelude_match_option

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[e3]) -> Option[e3]
import core/list/sort_by as sort_by(List[j5], (j5) -> y4) -> List[j5]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[w10]) -> List[w10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
declare println: (g) -> Unit

fn unwrap_or(v0: Option[l11], v1: l11) -> l11 =
  switch v0 {
    0 (v2: l11) ->
      v2
    1 ->
      v1
  }

fn main() -> Unit =
  let v4: Option[Int] = construct Option::Some#0(42)
  let v5: Int = call unwrap_or(v4, 0)
  let v3: Dict[core/show.Show, Int] = get_dict core/show.Show[Int]
  let v6: Unit = call println(v3, v5)
  v6
