crates/ir/tests/ir/snapshots/main__ir__lower__stdlib__prelude_result.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module stdlib__prelude_result

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[q3]) -> Option[q3]
import core/list/sort_by as sort_by(List[v5], (v5) -> k5) -> List[v5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], v1, (v1, t1) -> v1) -> v1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[y7]) -> List[y7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
fn ok_val() -> Result[l8, Int] =
  let v0: Result[l8, Int] = construct Result::Ok#0(42)
  v0

fn err_val() -> Result[String, r8] =
  let v1: Result[String, r8] = construct Result::Err#1("oops")
  v1

fn main() -> Int =
  let v2: Result[z8, Int] = call ok_val()
  switch v2 {
    0 (v3: Int) ->
      v3
    1 (v4: d) ->
      0
  }
